<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/mert_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical" 
        android:background="#a1ffffff"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/linearlayout_border"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewAccount"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/mert_name"
                android:textColor="@color/appmaincolor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/mch_Account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="14dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/linearlayout_border"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewPW"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:text="@string/mert_pwd"
                android:textColor="@color/appmaincolor"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/mch_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="14dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/linearlayout_border"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/button"
                android:text="@string/loginButton"
                android:textColor="#ffffff"
                android:drawableTop="@drawable/button_selector"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewForgetPw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:text="@string/forgetPw"
                android:textColor="@color/appmaincolor"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>