<?xml version="1.0" encoding="utf-8"?>
<com.yuguo.business.view.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_menu"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/img_frame_background"
    android:scrollbars="none" >

    <LinearLayout
        style="@style/layout_widthWrap_heightMatch"
        android:orientation="horizontal" >

        <include layout="@layout/layout_menu" />

        <LinearLayout
            style="@style/layout_match_parent"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <RelativeLayout
                style="@style/layout_widthMatch_heightWrap"
                android:background="@color/appmaincolor"
                android:paddingBottom="20dp" >

                <RelativeLayout
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" >

                    <ImageView
                        android:id="@+id/sideSlip"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="14dp"
                        android:onClick="toggleMenu"
                        android:src="@drawable/sideslip" />

                    <TextView
                        style="@style/layout_wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/ordercenter"
                        android:textColor="@android:color/white"
                        android:textSize="20sp" />
                </RelativeLayout>

                <LinearLayout
                    style="@style/layout_widthMatch_heightWrap"
                    android:layout_below="@+id/total"
                    android:layout_marginLeft="14dp"
                    android:layout_marginRight="14dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/receive_orders"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_style"
                            android:paddingBottom="8dp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:paddingTop="8dp"
                            android:text="@string/receiveorders"
                            android:textColor="@drawable/button_text_style"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/deliverGoods"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_style"
                            android:paddingBottom="8dp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:paddingTop="8dp"
                            android:text="@string/delivergoods"
                            android:textColor="@drawable/button_text_style"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" >

                        <Button
                            android:id="@+id/cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_style"
                            android:paddingBottom="8dp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:paddingTop="8dp"
                            android:text="@string/cancel"
                            android:textColor="@drawable/button_text_style"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</com.yuguo.business.view.SlidingMenu>